Fix Work animation on scroll up and refine mobile spacing

--- a/src/components/styles/Career.css
+++ b/src/components/styles/Career.css
@@ -8,7 +8,7 @@
   opacity: 1;
   height: auto;
   margin: auto;
-  margin-bottom: 250px;
+  margin-bottom: 50px;
   padding: 120px 0px;
 }
 
@@ -160,10 +160,9 @@
 }
 @media only screen and (max-width: 1025px) {
   .career-section {
-    padding: 60px 0px;
-    padding-top: 100px;
-    margin-top: -50px;
-    margin-bottom: 50px;
+    padding-top: 50px;
+    margin-top: 0;
+    margin-bottom: 20px;
   }
 }
 @media only screen and (max-width: 900px) {
@@ -206,11 +205,17 @@
     padding-left: 5%;
   }
   .career-section {
-    padding-top: 60px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     margin-top: 0;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     align-items: start;
     place-items: inherit;
     justify-content: left;
+  }
+  .career-section h2 {
+    font-size: 40px;
+    line-height: 40px;
+    margin-bottom: 40px;
   }
 }
